<resources>
    <string name="client_id" translatable="false">5mt39sa7riglamm0agcmjs275d</string>
    <string name="clientSecret" translatable="false">1d8trgarhpad3lhiq3gel5ip3v56kkoh45g1q1stth6htg8j9119</string>

    <string name="app_name">Faceki</string>
    <string name="take_a_selfie">Take a Selfie</string>
    <string name="fit_your_face_in_the_middle">Fit your face in the middle</string>
    <string name="powered_by">powered by</string>
    <string name="error">Error</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="telephone_number">Telephone Number*</string>
    <string name="e_mail">e-Mail*</string>
    <string name="password">password*</string>
    <string name="next">Next</string>
    <string name="verify_your_identity">Verify Your Identity</string>
    <string name="it_will_take_only_few_seconds">It will take only few seconds</string>
    <string name="successful">Successful</string>
    <string name="fail">Failed</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="permission_not_granted_by_user">Permissions not granted by the user.</string>
    <string name="could_not_set_up_the_face_detector">Could not set up the face detector!</string>
    <string name="no_face_found">No face found!</string>
    <string name="wrong_url">wrong url!</string>

    <string name="don_t_have_a_faceki_account">Don\'t have a FACEKI account?</string>
    <string name="sign_up1">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_a_selfie">Sign in with a selfie</string>
    <string name="back_to_home">Back to Home</string>
    <string name="welcome">Welcome</string>
</resources>
